# app-clone-db

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clone.rs  command_helper.rs  connection.rs  lib.rs  main.rs  pg_tools.rs  profiles.rs  schema.rs  storage.rs  types.rs
src/components/: ColorPicker.css  ColorPicker.tsx  ConnectionCard.tsx  DatabaseSelectorModal.tsx  EditTagModal.tsx  Layout.tsx  LoadOperationModal.tsx  SaveOperationModal.tsx  TagModal.tsx  TagSelect.tsx  UpdateNotification.tsx
src/components/ui/: toast.tsx
src/context/: PgToolsContext.tsx
src/hooks/: use-color-theme.ts  use-notification.ts  use-tauri.ts  use-theme.ts  use-updater.ts
src/lib/: utils.ts
src/pages/: Clone.tsx  ConnectionForm.tsx  DownloadSchema.tsx  History.tsx  Home.tsx  Settings.tsx
src/types/: index.ts
