[package]
name = "app-clone-db"
version = "0.8.0"
description = "PostgreSQL Database Cloning Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "app_clone_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
